feat: actualizar traducciones en inglés y español para mejorar la consistencia del contenido

--- a/translations/en.json
+++ b/translations/en.json
@@ -14,7 +14,6 @@
   "addPNSContact": "Add PNS Contact",
   "addRelationship": "Add relationship",
   "addVaccination": "Añadir Vacuna",
-  "addVaccine": "Add vaccine",
   "admissionDate": "Admission Date",
   "admissionWard": "Admission Ward",
   "admittingDoctor": "Admitting Doctor",
@@ -23,7 +22,6 @@
   "affectiveBond": "Vínculo Afectivo",
   "age": "Age",
   "ageGroupDetails": "Age group details",
-  "ageRange": "Age range",
   "alcoholUse": "Alcohol Use",
   "alcoholUseDuration": "Alcohol Use Duration",
   "alive": "Alive",
@@ -35,7 +33,6 @@
   "Anamnesis": "Anamnesis",
   "anatomy": "Anatomía",
   "antecedentes": "Medical History",
-  "Antecedentes": "Antecedentes",
   "apgar10Min": "Apgar 10 Minutos",
   "apgar1Min": "Apgar 1 Minuto",
   "apgar5Min": "Apgar 5 Minutos",
@@ -80,7 +77,6 @@
   "clinicalViews": "Clinical views",
   "completed": "Administrado",
   "condition": "Condition",
-  "conditional": "Conditional",
   "conditionNowVisible": "It is now visible on the Conditions page",
   "conditions": "Conditions",
   "conditionSaved": "Condition saved",
@@ -96,7 +92,6 @@
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
   "Cuidado prenatal": "Prenatal Care",
-  "Current pregnancy": "Current pregnancy",
   "currentPregnancy": "Embarazo Actual",
   "customViews": "In this section, you'll find custom clinical views tailored to patients' conditions and enrolled care programs.",
   "dataDisplayed": "Data displayed",
@@ -137,10 +132,8 @@
   "edit": "Edit",
   "editAppointment": "Edit an appointment",
   "editCondition": "Edit a Condition",
-  "editDose": "Edit Dose Details",
   "editEncounter": "Edit",
   "editForm": "Edit Form",
-  "embarazoActual": "Current pregnancy",
   "encounterDate": "Date",
   "encounterDeleted": "Encounter deleted",
   "encounterDetails": "Encounter details",
@@ -149,7 +142,6 @@
   "endRelationship": "End relationship",
   "enterCondition": "Enter condition",
   "error": "Error",
-  "errorLoadingConcepts": "Error loading vaccination concepts",
   "errorLoadingPatient": "Error Loading Patient Data",
   "errorState": "Error al cargar la leyenda",
   "esophagus": "Esophageal Patency",
@@ -234,6 +226,7 @@
   "location": "Location",
   "lochiaCharacteristics": "Característica de Loquios",
   "manageVaccinationSchedule": "Manage Schedule",
+  "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Maternal Condition",
   "maternalHistory": "Antecedentes Maternos",
   "maternalPulse": "Maternal Pulse (bpm)",
@@ -271,9 +264,7 @@
   "noConditionsToDisplay": "No conditions to display",
   "noContactToDisplay": "There is no contact data to display for this patient.",
   "noCurrentAppointments": "There are no appointments scheduled for today to display for this patient",
-  "noDataAvailable": "No data available",
   "noDataAvailableDescription": "No data available",
-  "noDose": "No Dose",
   "noEncounterToDisplay": "There are no encounters to display for this patient.",
   "noFamilyHistoryData": "There is no family history data to display for this patient.",
   "noLegendItems": "No hay elementos de leyenda disponibles",
@@ -294,7 +285,6 @@
   "occurrenceDate": "Fecha de ocurrencia",
   "onsetDate": "Onset date",
   "operatingDoctor": "Operating Doctor",
-  "optional": "Optional",
   "orientacion": "Guidance and counseling",
   "otherRelationships": "Other Relationships",
   "otherSubstanceAbuse": "Other Substance Abuse",
@@ -355,20 +345,15 @@
   "relationshipConfirmationText": "This will end the relationship. Are you sure you want to proceed?",
   "relationshipError": "Relationship Error",
   "relationshipErrorMessage": "Request Failed",
-  "remove": "Remove dose",
-  "removeVaccine": "Remove vaccine",
   "required": "Required",
   "respiratoryRate": "Respiratory Rate (rpm)",
   "responses": "Respuestas",
+  "resumenPartoPuerperio": "Resumen de Parto y Puerperio",
   "save": "Save",
   "savedRelationship": "Relationship ended successfully",
-  "saveReminder": "Remember to save your changes",
-  "saveSchema": "Save schema",
   "scheduled": "Próxima dosis",
   "searchConditions": "Search conditions",
-  "searchHelper": "Search and select a vaccine to add",
   "searching": "Searching",
-  "searchVaccine": "Search vaccine",
   "seeAll": "See all",
   "selectSeverity": "Seleccione severidad",
   "selectVaccine": "Select Vaccine",
@@ -417,7 +402,6 @@
   "type": "Type",
   "typeOfSurgery": "Type of Surgery",
   "umbilicalCord": " Umbilical cord",
-  "unsavedChanges": "Unsaved Changes",
   "upcoming": "Upcoming",
   "upcomingAppointments": "Upcoming appointments",
   "upcomingCheckups": "Upcoming checkups",
@@ -440,6 +424,5 @@
   "visitDate": "Screening Date",
   "vitaminKAdmin": "Vitamin K administration",
   "weight": "Weight (kg)",
-  "wellChildCare": "Control de Niño Sano",
-  "wellChildCareTabs": "Pestañas de Control de Niño Sano"
+  "wellChildCare": "Control de Niño Sano"
 }
