--- a/translations/es.json
+++ b/translations/es.json
@@ -14,7 +14,6 @@
   "addPNSContact": "Agregar contacto de pareja",
   "addRelationship": "Agregar relación",
   "addVaccination": "Agregar vacunación",
-  "addVaccine": "Agregar vacuna",
   "admissionDate": "Fecha de admisión",
   "admissionWard": "Sala de admisión",
   "admittingDoctor": "Médico responsable de la admisión",
@@ -23,7 +22,6 @@
   "affectiveBond": "Vínculo afectivo",
   "age": "Edad",
   "ageGroupDetails": "Detalles del grupo de edad",
-  "ageRange": "Rango de edad",
   "alcoholUse": "Uso de alcohol",
   "alcoholUseDuration": "Duración del consumo de alcohol",
   "alive": "Vivo",
@@ -35,7 +33,6 @@
   "Anamnesis": "Anamnesis",
   "anatomy": "Anatomía",
   "antecedentes": "Antecedentes",
-  "Antecedentes": "Antecedentes",
   "apgar10Min": "Apgar al minuto 10",
   "apgar1Min": "Apgar al minuto 1",
   "apgar5Min": "Apgar al minuto 5",
@@ -80,7 +77,6 @@
   "clinicalViews": "Vistas clínicas",
   "completed": "Completado",
   "condition": "Condición",
-  "conditional": "Condicional",
   "conditionNowVisible": "Ahora es visible en la página de condiciones",
   "conditions": "Condiciones",
   "conditionSaved": "Condición guardada",
@@ -96,7 +92,6 @@
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
   "Cuidado prenatal": "Cuidado prenatal",
-  "Current pregnancy": "Embarazo actual",
   "currentPregnancy": "Embarazo Actual",
   "customViews": "En esta sección, encontrará vistas clínicas personalizadas adaptadas a las condiciones de los pacientes y los programas de atención inscrita.",
   "dataDisplayed": "Datos mostrados",
@@ -137,10 +132,8 @@
   "edit": "Editar",
   "editAppointment": "Editar cita",
   "editCondition": "Editar condición",
-  "editDose": "Editar detalles de la dosis",
   "editEncounter": "Editar encuentro",
   "editForm": "Editar formulario",
-  "embarazoActual": "Embarazo actual",
   "encounterDate": "Fecha del encuentro",
   "encounterDeleted": "Encuentro eliminado",
   "encounterDetails": "Detalles del encuentro",
@@ -149,7 +142,6 @@
   "endRelationship": "Finalizar relación",
   "enterCondition": "Ingrese la condición",
   "error": "Error",
-  "errorLoadingConcepts": "Error al cargar los conceptos",
   "errorLoadingPatient": "Error al cargar los datos del paciente",
   "errorState": "Error al cargar la leyenda",
   "esophagus": "Esófago permeable",
@@ -234,6 +226,7 @@
   "location": "Ubicación",
   "lochiaCharacteristics": "Característica de Loquios",
   "manageVaccinationSchedule": "Administrar calendario de vacunación",
+  "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Condición materna",
   "maternalHistory": "Antecedentes maternos",
   "maternalPulse": "Pulso materno (BPM)",
@@ -271,9 +264,7 @@
   "noConditionsToDisplay": "No hay condiciones para mostrar.",
   "noContactToDisplay": "No hay datos de contacto disponibles para este paciente.",
   "noCurrentAppointments": "No hay citas programadas para hoy para este paciente.",
-  "noDataAvailable": "No hay datos disponibles.",
   "noDataAvailableDescription": "No hay datos disponibles.",
-  "noDose": "Sin dosis",
   "noEncounterToDisplay": "No hay encuentros que mostrar para este paciente.",
   "noFamilyHistoryData": "No hay antecedentes familiares registrados para este paciente.",
   "noLegendItems": "No hay elementos de leyenda disponibles",
@@ -294,7 +285,6 @@
   "occurrenceDate": "Fecha de ocurrencia del evento",
   "onsetDate": "Fecha de inicio",
   "operatingDoctor": "Médico cirujano",
-  "optional": "Opcional",
   "orientacion": "Orientación y consejería",
   "otherRelationships": "Otras relaciones",
   "otherSubstanceAbuse": "Abuso de otras sustancias",
@@ -356,20 +346,15 @@
   "relationshipConfirmationText": "Esto terminará con la relación.¿Estás seguro de que quieres continuar?",
   "relationshipError": "Error de relación",
   "relationshipErrorMessage": "Solicitud fallida",
-  "remove": "Eliminar",
-  "removeVaccine": "Vacuna eliminada",
   "required": "Requerido",
   "respiratoryRate": "Tasa respiratoria (RPM)",
   "responses": "Respuestas",
+  "resumenPartoPuerperio": "Resumen de Parto y Puerperio",
   "save": "Guardar",
   "savedRelationship": "Relación guardada con éxito",
-  "saveReminder": "Recuerda guardar tus cambios",
-  "saveSchema": "Guardar esquema",
   "scheduled": "Programado",
   "searchConditions": "Condiciones de búsqueda",
-  "searchHelper": "Busque y seleccione una vacuna para agregar",
   "searching": "Buscando...",
-  "searchVaccine": "Buscar vacuna",
   "seeAll": "Ver Todo",
   "selectSeverity": "Seleccione la severidad",
   "selectVaccine": "Seleccione vacuna",
@@ -418,7 +403,6 @@
   "type": "Tipo",
   "typeOfSurgery": "Tipo de cirugía",
   "umbilicalCord": "Cordón umbilical",
-  "unsavedChanges": "Cambios no guardados",
   "upcoming": "Próximo (duda)",
   "upcomingAppointments": "Próximas citas",
   "upcomingCheckups": "Próximos controles",
@@ -441,6 +425,5 @@
   "visitDate": "Fecha de visita",
   "vitaminKAdmin": "Administración de vitamina K",
   "weight": "Peso",
-  "wellChildCare": "Control de Niño Sano",
-  "wellChildCareTabs": "Pestañas de Control de Niño Sano"
+  "wellChildCare": "Control de Niño Sano"
 }
