fix: correct translation for delivery or abortion in Spanish

--- a/translations/es.json
+++ b/translations/es.json
@@ -106,7 +106,7 @@
   "dead": "Muerto",
   "defaulterTracing": "Seguimiento de pacientes incumplidos",
   "delete": "Borrar",
-  "deliveryOrAbortion": "Parto o aborto",
+  "deliveryOrAbortion": "Partos y Abortos",
   "deliveryType": "Tipo de parto",
   "department": "Departamento",
   "descentOfHead": "Descenso de la presentación",
