Titulo para el apartado de imprimir FUAs

--- a/translations/en.json
+++ b/translations/en.json
@@ -41,7 +41,6 @@
   "appointments": "Appointments",
   "appointmentToFulfill": "Select appointment to fulfill",
   "appointmentType": "Appointment type",
-  "AtencionesPrenatales": "Prenatal Care",
   "AtencionesPuerperio": "Postpartum Care",
   "babyGivenVitaminD": "Baby Given Vitamin K",
   "balanceOverview": "Fluid Balance",
@@ -56,6 +55,7 @@
   "bodyTemperature": "Temperatura Corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "cancel": "Cancel",
+  "caracteristicaLoquios": "Característica de Loquios",
   "caseEncounter": "Case management encounters",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
   "caseManagemet": "Case Managemet",
@@ -91,7 +91,7 @@
   "credAgeGroups": "Control Según Edad",
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
-  "Cuidado prenatal": "Prenatal Care",
+  "CuidadoPrenatal": "Cuidado Prenatal",
   "currentPregnancy": "Embarazo Actual",
   "customViews": "In this section, you'll find custom clinical views tailored to patients' conditions and enrolled care programs.",
   "dataDisplayed": "Data displayed",
@@ -125,10 +125,7 @@
   "earsImplantationOther": "Other for implantation",
   "earsOther": "Other for ears",
   "earsPositionOther": "Other for position",
-  "ecografia": "Obstetric Ultrasound",
   "edadGestacional": "Gestational Age (weeks)",
-  "edadGestacionalEcografia": "Gestational Age in Weeks According to Ultrasound",
-  "edemaGestacional": "Gestational Edema",
   "edit": "Edit",
   "editAppointment": "Edit an appointment",
   "editCondition": "Edit a Condition",
@@ -150,7 +147,6 @@
   "examDate": "Fecha de Examen",
   "examenFísicoTórax": "Chest Physical Examination",
   "ExamenGenitalesExternos": "External Genital Examination",
-  "examenPezon": "Nipple Examination",
   "failedDeleting": "couldn't be deleted",
   "familyContacts": "Family contacts",
   "familyRelationshipFormTitle": "Family Relationship Form",
@@ -171,7 +167,6 @@
   "fontanelleOther": "Other (Fontanelle)",
   "frecuenciaCardiaca": "Heart Rate",
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
-  "gananciaPeso": "Weight Gain",
   "gastricLavage": "Lavado Gástrico",
   "gastricLavageCount": "Cantidad de Lavados Gástricos",
   "genitourinary": "Genitourinary",
@@ -201,10 +196,8 @@
   "immunizationTabs": "Pestañas de Inmunización",
   "inactive": "Inactive",
   "inactiveCases": "Inactive Cases",
-  "indicacionAcidoFolico": "Folic acid prescription",
-  "indicacionCalcio": "Calcium prescription",
-  "indicacionFierro": "Iron/folic acid prescription",
   "inPatientSummary": "In Patient Summary",
+  "involucionUterina": "Involución Uterina",
   "ipvOutcome": "IPV Outcome",
   "itemsPerPage": "Items per page",
   "kidHistory": "Antecedentes Patologicos",
@@ -224,7 +217,6 @@
   "loadingEncounters": "Loading encounters...",
   "loadingPatient": "Loding Patient...",
   "location": "Location",
-  "lochiaCharacteristics": "Característica de Loquios",
   "manageVaccinationSchedule": "Manage Schedule",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Maternal Condition",
@@ -279,13 +271,12 @@
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "There are no upcoming appointments to display for this patient",
   "Nueva Atención Postnatal": "New Postnatal Care",
-  "Nueva Atención Prenatal": "New Prenatal Care",
   "nursingDiagnosis": "Diagnóstico de Enfermería",
+  "observacion": "Observación",
   "observation": "Observation",
   "occurrenceDate": "Fecha de ocurrencia",
   "onsetDate": "Onset date",
   "operatingDoctor": "Operating Doctor",
-  "orientacion": "Guidance and counseling",
   "otherRelationships": "Other Relationships",
   "otherSubstanceAbuse": "Other Substance Abuse",
   "overdue": "Atrasada",
@@ -304,13 +295,11 @@
   "patient": "Patient",
   "patientFamilyTable": "Patient family table",
   "pending": "Pending",
-  "perfilBiofisico": "Biophysical Profile",
   "perinatalRecord": "Registro Perinatal",
   "pesoCorporal": "Body Weight (kg)",
   "pesoMadre": "Maternal Weight (kg)",
   "PielYMucosas": "Skin and Mucosa",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Birth Plan (Check-up/Visit/Not done/N/A)",
-  "planParto": "Birth Plan",
   "pnsAproach": "PNS Aproach",
   "populationType": "Population type",
   "posición": "Position (O/I/NA)",
@@ -330,7 +319,6 @@
   "previousMonth": "Previous month",
   "primaryDiagnosis": "Primary Diagnosis",
   "priorityOfAdmission": "Priority Of Admission",
-  "proteinuriaGestacional": "Gestational Proteinuria",
   "proximaCita": "Next Appointment",
   "puerperioInmediato": "Puerperio Inmediato",
   "reactionDescription": "Descripción de la reacción",
@@ -338,7 +326,6 @@
   "recommendedProcedure": "Recommended Procedure",
   "recordLabourDetails": "Record labour details",
   "referrals": "Referrals",
-  "reflejoOsteotendinoso": "Deep tendon reflex",
   "refreshing": "Refreshing...",
   "registerReaction": "Registrar Reacción",
   "relation": "Relation",
@@ -409,7 +396,6 @@
   "updateError": "Error updating upcoming appointment",
   "updateVaccinations": "Actualizar vacunas",
   "uterineHeight": "Uterine Height (cm)",
-  "uterineInvolution": "Involución Uterina",
   "vaccinationSchedule": "Vaccination Schedule",
   "vaccinationScheduleBuilder": "Vaccination Schedule Builder",
   "vaccinationTable": "Tabla de vacunaciones",
@@ -420,7 +406,6 @@
   "value": "Value",
   "viewEncounter": "View",
   "viewSelector": "Select view type",
-  "visitaDomiciliaria": "Home visit",
   "visitDate": "Screening Date",
   "vitaminKAdmin": "Vitamin K administration",
   "weight": "Weight (kg)",
