--- a/translations/es.json
+++ b/translations/es.json
@@ -41,7 +41,6 @@
   "appointments": "Citas",
   "appointmentToFulfill": "Seleccione la cita a atender",
   "appointmentType": "Tipo de cita",
-  "AtencionesPrenatales": "Atenciones prenatales",
   "AtencionesPuerperio": "Atenciones puerperio",
   "babyGivenVitaminD": "Vitamina D administrada al bebé",
   "balanceOverview": "Balance de líquidos",
@@ -56,6 +55,7 @@
   "bodyTemperature": "Temperatura corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "cancel": "Cancelar",
+  "caracteristicaLoquios": "Característica de Loquios",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
   "caseManagemet": "Gestión de casos",
@@ -91,7 +91,7 @@
   "credAgeGroups": "Control CRED según edad",
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
-  "Cuidado prenatal": "Cuidado prenatal",
+  "CuidadoPrenatal": "Cuidado Prenatal",
   "currentPregnancy": "Embarazo Actual",
   "customViews": "En esta sección, encontrará vistas clínicas personalizadas adaptadas a las condiciones de los pacientes y los programas de atención inscrita.",
   "dataDisplayed": "Datos mostrados",
@@ -125,10 +125,7 @@
   "earsImplantationOther": "Otros para implantación auricular",
   "earsOther": "Otros hallazgos en orejas",
   "earsPositionOther": "Otras observaciones sobre posición de las orejas",
-  "ecografia": "Ecografía obstétrica",
   "edadGestacional": "Edad Gestacional (semanas)",
-  "edadGestacionalEcografia": "Edad Gestacional en semanas según ecografía",
-  "edemaGestacional": "Edema gestacional",
   "edit": "Editar",
   "editAppointment": "Editar cita",
   "editCondition": "Editar condición",
@@ -150,7 +147,6 @@
   "examDate": "Fecha del Examen",
   "examenFísicoTórax": "Examen físico de tórax",
   "ExamenGenitalesExternos": "Examen de genitales externos",
-  "examenPezon": "Examen de pezón",
   "failedDeleting": "No se pudo eliminar",
   "familyContacts": "Contactos familiares",
   "familyRelationshipFormTitle": "Agregar contacto familiar",
@@ -171,7 +167,6 @@
   "fontanelleOther": "Otras observaciones sobre fontanela",
   "frecuenciaCardiaca": "Frecuencia cardíaca",
   "frecuenciaCardiacaFetal": "Frecuencia cardíaca fetal (por min.)",
-  "gananciaPeso": "Ganancia de Peso",
   "gastricLavage": "Lavado gástrico",
   "gastricLavageCount": "Cantidad de lavados gástricos",
   "genitourinary": "Genitourinario",
@@ -201,10 +196,8 @@
   "immunizationTabs": "Pestañas de Inmunización",
   "inactive": "Inactivo",
   "inactiveCases": "Casos inactivos",
-  "indicacionAcidoFolico": "Indicación de ácido fólico",
-  "indicacionCalcio": "Indicación de calcio",
-  "indicacionFierro": "Indicación de fierro",
   "inPatientSummary": "Resumen del paciente",
+  "involucionUterina": "Involución Uterina",
   "ipvOutcome": "Resultado de evaluación IPV",
   "itemsPerPage": "Elementos por página",
   "kidHistory": "Antecedentes patológicos",
@@ -224,7 +217,6 @@
   "loadingEncounters": "Cargando encuentros ...",
   "loadingPatient": "Cargando paciente ...",
   "location": "Ubicación",
-  "lochiaCharacteristics": "Característica de Loquios",
   "manageVaccinationSchedule": "Administrar calendario de vacunación",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Condición materna",
@@ -279,13 +271,12 @@
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas registradas para este paciente.",
   "Nueva Atención Postnatal": "Nueva atención postnatal",
-  "Nueva Atención Prenatal": "Nueva atención prenatal",
   "nursingDiagnosis": "Diagnóstico de enfermería",
+  "observacion": "Observación",
   "observation": "Observación",
   "occurrenceDate": "Fecha de ocurrencia del evento",
   "onsetDate": "Fecha de inicio",
   "operatingDoctor": "Médico cirujano",
-  "orientacion": "Orientación y consejería",
   "otherRelationships": "Otras relaciones",
   "otherSubstanceAbuse": "Abuso de otras sustancias",
   "overdue": "Atrasado",
@@ -305,13 +296,11 @@
   "patient": "Paciente",
   "patientFamilyTable": "Tabla de contactos familiares",
   "pending": "Pendiente",
-  "perfilBiofisico": "Perfil biofísico",
   "perinatalRecord": "Registro Perinatal",
   "pesoCorporal": "Peso corporal (kg)",
   "pesoMadre": "Peso madre (kg)",
   "PielYMucosas": "Piel y mucosas",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de parto (Control/VisitA/No SE Hizo/Na)",
-  "planParto": "Plan de parto",
   "pnsAproach": "Enfoque de notificación de parejas (PNS)",
   "populationType": "Tipo de población",
   "posición": "Posición (O/I/Na)",
@@ -331,7 +320,6 @@
   "previousMonth": "Mes anterior",
   "primaryDiagnosis": "Diagnóstico primario",
   "priorityOfAdmission": "Prioridad de admisión",
-  "proteinuriaGestacional": "Proteinuria gestacional",
   "proximaCita": "Próxima Cita",
   "puerperioInmediato": "Puerperio Inmediato",
   "reactionDescription": "Descripción de la reacción",
@@ -339,7 +327,6 @@
   "recommendedProcedure": "Procedimiento recomendado",
   "recordLabourDetails": "Registrar detalles del trabajo de parto",
   "referrals": "Referencias",
-  "reflejoOsteotendinoso": "Reflejo osteotendinoso",
   "refreshing": "Refrescando...",
   "registerReaction": "Registrar reacción",
   "relation": "Relación",
@@ -410,7 +397,6 @@
   "updateError": "Error de actualización",
   "updateVaccinations": "Actualizar vacunaciones",
   "uterineHeight": "Altura uterina (cm)",
-  "uterineInvolution": "Involución Uterina",
   "vaccinationSchedule": "Calendario de vacunación",
   "vaccinationScheduleBuilder": "Gestor del calendario de vacunación",
   "vaccinationTable": "Tabla de vacunaciones",
@@ -421,7 +407,6 @@
   "value": "Valor",
   "viewEncounter": "Ver encuentro",
   "viewSelector": "Seleccionar tipo de vista",
-  "visitaDomiciliaria": "Visita domiciliaria",
   "visitDate": "Fecha de visita",
   "vitaminKAdmin": "Administración de vitamina K",
   "weight": "Peso",
